build/sites/all/resources/trident-servicemonitor-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: trident-metrics
  namespace: trident-system
  labels:
    app: trident.netapp.io
    release: prometheus
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: trident.netapp.io
