build/sites/all/resources/hmkeycloak-resources-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmkeycloak-hypermute-cloud-ingress
  namespace: keycloak
spec:
  tls:
    - hosts:
        - hmkeycloak.hypermute.cloud
      secretName: hmkeycloak-hypermute-cloud-tls
  rules:
    - host: hmkeycloak.hypermute.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hmkeycloak-service
                port:
                  name: http
  ingressClassName: hypermute
---
