build/sites/all/resources/hmkeycloak-resources-v3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  labels:
    app: keycloak
    app.kubernetes.io/instance: hmkeycloak
    app.kubernetes.io/managed-by: keycloak-operator
  name: hmkeycloak-ingress
  namespace: keycloak
spec:
  defaultBackend:
    service:
      name: hmkeycloak-service
      port:
        name: http
  ingressClassName: hypermute
  rules:
  - host: hmkeycloak.hypermute.cloud
    http:
      paths:
      - backend:
          service:
            name: hmkeycloak-service
            port:
              name: http
        pathType: ImplementationSpecific
---
