build/sites/all/resources/hmkeycloak-resources-v4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: keycloak
    app.kubernetes.io/instance: hmkeycloak
    app.kubernetes.io/managed-by: keycloak-operator
  name: hmkeycloak-ingress
  namespace: keycloak
spec:
  ingressClassName: hypermute
  tls:
    - hosts:
        - hmkeycloak.hypermute.cloud
      secretName: hmkeycloak-hypermute-cloud-tls
  rules:
    - host: hmkeycloak.hypermute.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmkeycloak-service
                port:
                  name: http
