build/sites/all/resources/rocketchat-resources-v5.yaml
# rocketchat-ingress
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rocketchat-proxy
  namespace: rocketchat
spec:
  virtualhost:
    fqdn: rocket.dev.local
    tls:
      secretName: rocketchat-tls
  routes:
    - services:
        - name: rocketchat-rocketchat
          port: 80
      enableWebsockets: true
      loadBalancerPolicy:
        strategy: Cookie
